<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Digilist Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="Usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="txtEntrar">Entrar</string>
    <string name="Tipo">Tipo</string>
    <string name="Tamaño">Tamaño</string>
    <string name="Material">Material</string>
    <string name="Materiales">Materiales</string>
    <string name="Cantidad">Cantidad</string>
    <string name="Producto">Producto</string>
    <string name="Logo">Logo</string>
    <string name="Agregar">Agregar</string>
    <string name="Limpiar">Limpiar</string>
    <string name="Nombre">Nombre</string>
    <string name="Referencia">Referencia</string>
    <string name="prodvac">Campo producto vació</string>
    <string name="canvac">Campo cantidad vació</string>
    <string name="Agregar_inventario">Agregar Inventario</string>


    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">15dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="Agregar_Producto">Agregar Producto</string>
    <string name="ErrorServidor">Error en enviar la petición</string>
    <string name="Inventario_Agregado">Inventario Agregado</string>
    <string name="nomvac">Campo nombre vació</string>
    <string name="refvac">Campo referencia vació</string>
    <string name="tipvac">Seleccione un tipo</string>
    <string name="matvac">Seleccione un material</string>
    <string name="tamvac">Seleccione un tamaño</string>
    <string name="Agregar_Productos">Agregar Productos</string>
    <string name="Inventario">Inventario</string>
    <string name="Graficas">Graficas</string>
    <string name="Fecha">Fecha</string>
    <string name="Cantidad_Anterior">Cantidad\nAnterior</string>
    <string name="Accion">Acción</string>
    <string name="Nueva_Cantidad">Nueva\nCantidad</string>
    <string name="Productos">Productos</string>
    <string name="Usuarios">Usuarios</string>
    <string name="Nombres">Nombres</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Telefono">Teléfono</string>
    <string name="Direccion">Dirección</string>
    <string name="Rol">Rol</string>
    <string name="Roles">Roles</string>
    <string name="Editar">Editar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Detalles">Detalles</string>
    <string name="MensajeEliminarUsuario">¿Desea eliminar el usuario?</string>
    <string name="MensajeEliminarCiudad">¿Desea eliminar la ciudad?</string>
    <string name="Historico">Histórico</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Ciudades">Ciudades</string>
    <string name="IngresarUsuario">Ingresar Usuario</string>
    <string name="Usuario_Agregado">Usuario Agregado</string>
    <string name="Usuario_Actualizado">Usuario Actualizado</string>
    <string name="Campo_Vacios">Por favor llenar los campos vacíos!</string>
    <string name="Usuario_Eliminado">Usuario Eliminado</string>
    <string name="Producto_Eliminado">Producto Eliminado</string>
    <string name="Ciudad_Eliminada">Ciudad Eliminada</string>
    <string name="llenar_campos">Por favor llenar los campos requeridos</string>
    <string name="Configuracion">Configuración</string>
    <string name="Cerrar_sesion">Cerrar sesión</string>
    <string name="Descripcion">Descripción</string>
    <string name="Ciudad_Agregada">Ciudad agregada</string>
    <string name="Ciudad_actualizada">Ciudad actualizada</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Guardar">Guardar</string>
    <string name="MensajeEliminarProducto">¿Desea eliminar el  producto? \nRecuerde que se eliminara el stock y las ventas asociadas</string>
    <string name="Iniciandosesion">Iniciando sesión</string>
    <string name="Aceptar">Aceptar</string>
    <string name="ErrLogVac">Nombre de usuario o password vacíos</string>
    <string name="ErrLogInc">Nombre de usuario o password incorrectos</string>
    <string name="Reportes">Reportes</string>
    <string name="SeleccioneUno">Seleccione Uno</string>
    <string name="SeleccioneTipo">Seleccione Tipo</string>
    <string name="Agregar_Material">Agregar material</string>
    <string name="Agregar_Venta">Agregar Venta</string>
    <string name="Agregar_Tipo">Agregar Tipo</string>
    <string name="Editar_Material">Editar material</string>
    <string name="MensajeEliminarMaterial">¿Desea eliminar el  material?</string>
    <string name="Ventas">Ventas</string>
    <string name="Cliente">Cliente</string>
    <string name="Cliente_Insertado">Cliente agregado</string>
    <string name="Nueva_Venta">Nueva Venta</string>
    <string name="Ingreso_Cliente">Ingreso Cliente</string>
    <string name="ProductoExistencia">Productos en Existencias</string>
    <string name="ProductoVendidos">Productos Vendidos</string>


</resources>
