<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#f5f5f5">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#f5f5f5">

            <TableLayout
                android:id="@+id/tlInventario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp">

                <TableRow
                    android:id="@+id/trhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#CB2F17"
                    android:baselineAligned="false"
                    android:gravity="center|center_vertical|center_horizontal">

                    <TextView
                        android:id="@+id/lblProducto"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:text="@string/Producto"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/lblTipo"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:text="@string/Tipo"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/lblTamanio"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:text="@string/Tamaño"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/lblMaterial"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:text="@string/Material"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/lblCantidad"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:text="@string/Cantidad"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@android:color/white" />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>