<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:background="#f5f5f5">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/backgroudProducto">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:id="@+id/progressBarProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:id="@+id/lyProducto"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:layout_marginTop="22dp"
                android:text="@string/IngresarProducto"
                android:textColor="#ffe73018"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/Nombre"
                android:textColor="#9a9a9a"
                android:textIsSelectable="false"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtNombreProducto"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/edittext_rounded_corners"
                android:completionThreshold="1"
                android:textColor="#565656" />


            <TextView
                android:id="@+id/txtReferencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Referencia"
                android:textColor="#9a9a9a"
                android:textIsSelectable="false"
                android:textSize="18sp"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/edtReferencia"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/edittext_rounded_corners"
                android:inputType="number"
                android:textColor="#0C8FD4" />

            <TextView
                android:id="@+id/txtTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Tipo"
                android:textColor="#9a9a9a"
                android:textIsSelectable="false"
                android:textSize="18sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sTipo" />

            <TextView
                android:id="@+id/txtMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Material"
                android:textColor="#9a9a9a"
                android:textSize="18sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sMaterial" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="26dp"
                android:paddingBottom="15dp">

                <Button
                    android:id="@+id/btnAgregar"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/red_button2"
                    android:drawablePadding="3dp"
                    android:text="@string/Agregar"
                    android:textColor="#FFF"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_alignBottom="@+id/btnAgregar"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/gray_button"
                    android:drawablePadding="3dp"
                    android:text="@string/Limpiar"
                    android:textColor="#FFF"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/btnLimpiar"
                    android:layout_toRightOf="@+id/btnAgregar"
                    android:gravity="center_horizontal"
                    android:text="ó"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#9a9a9a" />


            </RelativeLayout>
        </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</LinearLayout>


