<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ScrollView
            android:id="@+id/svClientes"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#f5f5f5">

            <TableLayout
                android:id="@+id/tlClientes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp">

                <TableRow

                    android:id="@+id/trhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#CB2F17"
                    android:baselineAligned="false"
                    android:gravity="center|center_vertical|center_horizontal">

                    <TextView
                        android:id="@+id/lblNombre"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:text="@string/Nombres"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/lblTelefono"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:text="@string/Telefono"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/lblDireccion"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:text="@string/Direccion"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/lblCiudad"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:text="@string/Ciudad"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@android:color/white" />

                </TableRow>
            </TableLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/pbClientes"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:indeterminate="false" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="New Button"
            android:id="@+id/btnAgregarCli"
            android:background="@drawable/round_button_red"
            android:src="@drawable/ic_action_add_w"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp" />

    </RelativeLayout>
</LinearLayout>