<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:background="#f5f5f5">

        <RelativeLayout
            android:id="@+id/backgroudProducto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/lyProducto"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTitulo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/Agregar_Material"
                    android:textColor="#CB2F17"
                    android:textSize="20sp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/Nombre"
                    android:textColor="#9a9a9a"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtNombreMaterial"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_rounded_corners"
                    android:completionThreshold="1"
                    android:textColor="#565656" />


                <TextView
                    android:id="@+id/txtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Descripcion"
                    android:textColor="#9a9a9a"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_rounded_corners"
                    android:textColor="#565656"
                    android:layout_marginBottom="40dp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</LinearLayout>


